--- a/AxcelCapital/Views/FinancialServices/InvoiceFinancing.cshtml
+++ b/AxcelCapital/Views/FinancialServices/InvoiceFinancing.cshtml
@@ -3,5 +3,9 @@
     ViewBag.Title = "InvoiceFinancing";
 }
 
-<h2>InvoiceFinancing</h2>
+
+<div class="top-margin"></div>
+
+
+<h2>Invoice Financing</h2>
 
