--- a/AxcelCapital/Views/FinancialServices/BusinessFinancing.cshtml
+++ b/AxcelCapital/Views/FinancialServices/BusinessFinancing.cshtml
@@ -3,5 +3,9 @@
     ViewBag.Title = "BusinessFinancing";
 }
 
-<h2>BusinessFinancing</h2>
+
+<div class="top-margin"></div>
+
+
+<h2>Business Financing</h2>
 
