pushing completed service pages with responsive web

--- a/AxcelCapital/Views/FinancialServices/BespokeSolutions.cshtml
+++ b/AxcelCapital/Views/FinancialServices/BespokeSolutions.cshtml
@@ -7,5 +7,33 @@
 <div class="top-margin"></div>
 
 
-<h2>Bespoke Solutions</h2>
+<div>
+
+    <img class="img-fluid" src="~/Images/fin_bespokeSolutions.jpg" />
+    <div class="finSvcs-overlay">Bespoke Solutions</div>
+    <div id="scroller" class="finSvcs-scroll">
+        <a href="#finSvcs-wrapper"><span></span>Scroll</a>
+    </div>
+</div>
+
+<div class="finSvcs-wrapper" id="finSvcs-wrapper">
+    <div class="container">
+        <div class="finSvcs-description">
+            <h2>
+                We understand that all customers have unique needs. Approaching the various banks and financial institutions can be laborious, and trying to understand and compare between their differing loan structures and rates can be challenging.
+                <br />
+                <br />
+                It is easier and safer to leave the hunting to the experts who know best how to tailor a bespoke solution for your situation, so that you can be freed up to focus on your business.
+            </h2>
+        </div>
+        <div>
+            <div class="getAQuoteBtn">
+                <a href="@Url.Action("Index", "Home")#contactUs" class="btn btn-axcelButtonSvcsPgs">Speak with AxcelCapital today</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
