--- a/AxcelCapital/Views/FinancialServices/PropertyFinancing.cshtml
+++ b/AxcelCapital/Views/FinancialServices/PropertyFinancing.cshtml
@@ -7,5 +7,30 @@
 <div class="top-margin"></div>
 
 
-<h2>Property Financing</h2>
+<div>
+
+    <img class="img-fluid" src="~/Images/fin_propertyFinance.jpg" />
+    <div class="finSvcs-overlay">Property Financing</div>
+    <div id="scroller" class="finSvcs-scroll">
+        <a href="#finSvcs-wrapper"><span></span>Scroll</a>
+    </div>
+</div>
+
+<div class="finSvcs-wrapper" id="finSvcs-wrapper">
+    <div class="container">
+        <div class="finSvcs-description">
+            <h2>
+                If your financial shopping list includes property loans, we will be able to help you with your mortgage financing, commercial or industrial property loans, HDB or private home loans, and even equity loans. We will find you the help you need.
+            </h2>
+        </div>
+        <div>
+            <div class="getAQuoteBtn">
+                <a href="@Url.Action("Index", "Home")#contactUs" class="btn btn-axcelButtonSvcsPgs">Speak with AxcelCapital today</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
