--- a/AxcelCapital/Views/Shared/_Layout.cshtml
+++ b/AxcelCapital/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AxcelCapital: Loan Financing</title>
+    <title>AxcelCapital: Finance Your Business</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -27,9 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index","Home")">Home</a>
                 </li>
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link" href="@Url.Action("About","Home")">About Us</a>
-                </li>
+                </li>*@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarFinancialSvcs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Financial Services</a>
                     <div class="dropdown-menu" aria-labelledby="navbarFinancialSvcs">
