--- a/AxcelCapital/Content/AxcelCapCustom.css
+++ b/AxcelCapital/Content/AxcelCapCustom.css
@@ -84,21 +84,21 @@ html, body {
     padding-bottom: 20px;
     color: #01AED2;
     /*font-size: 5vw;
-    font-weight: bold;*/
+    font-weight: 700;*/
     text-align: center;
 }
 
 @media (min-width: 601px) {
     .carousel-title {
         font-size: 45px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
 @media (max-width: 600px) {
     .carousel-title {
         font-size: 25px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
@@ -118,19 +118,19 @@ html, body {
 @media (min-width: 601px) {
     .carousel-description {
         font-size: 25px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
 @media (max-width: 600px) {
     .carousel-description {
         font-size: 20px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
 .top-margin {
-    margin-top: 80px;
+    margin-top: 83px;
     /*padding: 0px;*/
 }
 
@@ -155,7 +155,7 @@ html, body {
 .section2-title {
     color: #01AED2;
     font-size: 2.2vw;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     padding: 1% 15%;
 }
@@ -163,14 +163,14 @@ html, body {
 @media (max-width: 600px) {
     .section2-title h2 {
         font-size: 35px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
 @media (min-width: 601px) {
     .section2-title h2 {
         font-size: 45px;
-        font-weight: bold;
+        font-weight: 700;
     }
 }
 
@@ -227,7 +227,7 @@ html, body {
     .testimonial-section h2 {
         color: white;
         font-size: 35px;
-        font-weight: bold;
+        font-weight: 700;
         text-align: center;
         padding: 0 15% 3% 15%;
     }
@@ -239,7 +239,7 @@ html, body {
 
         .testimonial-section h2 {
             font-size: 45px;
-            font-weight: bold;
+            font-weight: 700;
         }
 }
 
@@ -298,266 +298,488 @@ html, body {
 }
 
 
-    .gMap-col-md-12 {
-        position: relative;
-        width: 100%;
-        min-height: 1px;
-        padding-right: 0px;
-        padding-left: 0px;
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
+.gMap-col-md-12 {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
 
 
 
-    /*Get In Touch section*/
-    .section-getInTouch {
-        padding: 10% 0 5% 0;
-    }
+/*Get In Touch section*/
+.section-getInTouch {
+    padding: 10% 0 5% 0;
+}
 
-    .section-getInTouch-title {
-        color: #01AED2;
-        font-size: 2.2vw;
-        font-weight: bold;
-        text-align: center;
-        padding: 0 15% 3% 15%;
-    }
+.section-getInTouch-title {
+    color: #01AED2;
+    font-size: 2.2vw;
+    font-weight: 700;
+    text-align: center;
+    padding: 0 15% 3% 15%;
+}
 
-    .section-getInTouch-DescriptionTitle {
-        color: #114369;
-        /*text-align: right;*/
+.section-getInTouch-DescriptionTitle {
+    color: #114369;
+    /*text-align: right;*/
+    font-weight: 700;
+}
+
+.section-GetInTouch-description {
+}
+
+@media (max-width: 600px) {
+    .section-getInTouch-title h2 {
+        font-size: 35px;
         font-weight: 700;
     }
 
+    .section-getInTouch-DescriptionTitle {
+        text-align: center;
+    }
+
     .section-GetInTouch-description {
-    }
-
-    @media (max-width: 600px) {
-        .section-getInTouch-title h2 {
-            font-size: 35px;
-            font-weight: bold;
-        }
-
-        .section-getInTouch-DescriptionTitle {
-            text-align: center;
-        }
-
-        .section-GetInTouch-description {
-            text-align: center;
-        }
-    }
-
-    @media (min-width: 601px) {
-        .section-getInTouch-title h2 {
-            font-size: 45px;
-            font-weight: bold;
-        }
-    }
-
-
-
-
-
-    /*Location Section*/
-    #map {
-        height: 600px;
-        width: 100%;
-        z-index: 1;
-    }
-
-
-    #location-card {
-        position: absolute;
-        width: 30%;
-        height: 60%;
-        z-index: 10;
-        right: 0;
-        margin-right: 5%;
-        margin-top: -550px;
-        background: #01AED2;
-    }
-
-
-    /*Contact us Section*/
-    .contactUs h1 {
         text-align: center;
     }
+}
 
+@media (min-width: 601px) {
+    .section-getInTouch-title h2 {
+        font-size: 45px;
+        font-weight: 700;
+    }
+}
+
+
+
+
+
+/*Location Section*/
+#map {
+    height: 600px;
+    width: 100%;
+    z-index: 1;
+}
+
+
+#location-card {
+    position: absolute;
+    width: 30%;
+    height: 60%;
+    z-index: 10;
+    right: 0;
+    margin-right: 5%;
+    margin-top: -550px;
+    background: #01AED2;
+}
+
+
+/*Contact us Section*/
+.contactUs h1 {
+    text-align: center;
+}
+
+.contactUs-title {
+    color: #01AED2;
+    font-size: 2.2vw;
+    font-weight: 700;
+    text-align: center;
+    padding: 5% 10%;
+}
+
+@media (max-width: 600px) {
     .contactUs-title {
-        color: #01AED2;
-        font-size: 2.2vw;
-        font-weight: bold;
-        text-align: center;
-        padding: 5% 10%;
+        padding: 10% 10%;
     }
 
-    @media (max-width: 600px) {
-        .contactUs-title {
-            padding: 10% 10%;
-        }
-
-            .contactUs-title h2 {
-                font-size: 35px;
-                font-weight: bold;
-            }
-    }
-
-    @media (min-width: 601px) {
         .contactUs-title h2 {
-            font-size: 45px;
-            font-weight: bold;
+            font-size: 35px;
+            font-weight: 700;
         }
+}
+
+@media (min-width: 601px) {
+    .contactUs-title h2 {
+        font-size: 45px;
+        font-weight: 700;
+    }
+}
+
+input,
+select,
+textarea {
+    max-width: 500px;
+}
+
+.bigTextArea {
+    padding: 20px 0;
+    margin-top: 20px;
+}
+
+.form-error {
+    color: #F65D7B;
+    font-size: 14px;
+}
+
+.form-group {
+    margin-bottom: 0;
+    padding: 20px 0;
+}
+
+.form-radiobtn {
+    display: inline;
+}
+
+.btn-wrapper {
+    text-align: center;
+    padding: 20px;
+}
+
+@media (max-width: 600px) {
+    .btn-wrapper {
+        padding: 20px;
+    }
+}
+
+
+.btn-primary {
+    color: #fff;
+    font-size: 25px;
+    background-color: #01AED2;
+    border-color: #01AED2;
+    height: 60px;
+    /*width: 150px*/
+}
+
+    .btn-primary:hover {
+        color: #fff;
+        font-size: 20px;
+        background-color: #114369;
+        border-color: #114369;
     }
 
-    input,
-    select,
-    textarea {
-        max-width: 500px;
+.form-control {
+    border: none;
+    border-bottom: 1.5px solid #114369;
+    border-radius: 0;
+}
+
+    .form-control:focus {
+        border: none;
+        box-shadow: none;
+        border-bottom: 1.5px solid #01AED2;
+    }
+
+
+.contactUs-Form div {
+    position: relative;
+}
+
+.contactUs-Form label {
+    font-weight: 500;
+}
+
+.moving-label {
+    position: absolute;
+    top: 10px;
+    pointer-events: none;
+    z-index: 10;
+    color: #999;
+    transition: 0.5s;
+}
+
+
+.contactUs-Form input:focus + label,
+.contactUs-Form textarea:focus + label,
+.contactUs-Form input:valid + label,
+.contactUs-Form textarea:valid + label {
+    position: absolute;
+    top: -12px;
+    color: #01AED2;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.radiobtn_label_blue {
+    color: #01AED2;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+@media (max-width: 600px) {
+    .form-group {
+        margin-bottom: 0;
+        padding: 0;
+    }
+
+    .row {
+        margin: 0;
+    }
+
+    .col-xs-12 {
+        margin-bottom: 1em;
+        padding: 10px 0;
+    }
+
+    .moving-label {
+        top: 20px;
     }
 
     .bigTextArea {
-        padding: 20px 0;
-        margin-top: 20px;
+        padding: 0;
+        margin-top: 0;
+    }
+}
+
+.g-recaptcha {
+    transform: scale(0.77);
+    -webkit-transform: scale(0.77);
+    transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+}
+/*resize recaptcha dynamically*/
+
+#g-recaptcha-response {
+    display: block !important;
+    position: absolute;
+    margin: -78px 0 0 0 !important;
+    width: 302px !important;
+    height: 76px !important;
+    z-index: -999999;
+    opacity: 0;
+}
+
+#recaptcha-error-msg {
+    display: none;
+}
+
+.recaptcha-div {
+    text-align: left;
+}
+
+
+
+
+
+/*Financial Services Pgs*/
+@media (max-width: 426px) {
+    .finSvcs-overlay {
+        position: absolute;
+        top: 33%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-weight: 700;
+        font-size: 35px;
+        text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    }
+}
+
+@media (min-width: 426px) and (max-width: 767px) {
+
+    .finSvcs-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-weight: 700;
+        font-size: 35px;
+        text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    }
+}
+
+
+@media (min-width: 768px) {
+
+    .finSvcs-overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-weight: 700;
+        font-size: 70px;
+        text-shadow: 0 1px 2px rgba(0,0,0,.6);
+    }
+}
+
+
+/*specifically for govt Assisted Schemes & personal loan solutions since it's too long*/
+.finSvcs-overlay-govtAssist {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-20%, -50%);
+    color: white;
+    font-weight: 700;
+    font-size: 70px;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
+}
+
+@media (max-width: 426px) {
+    .finSvcs-overlay-govtAssist {
+        font-size: 30px;
+        top: 30%;
+        left: 20%;
+    }
+}
+
+@media (min-width: 426px) and (max-width: 769px) {
+    .finSvcs-overlay-govtAssist {
+        font-size: 35px;
+        top: 45%;
+        left: 30%;
+    }
+}
+
+@media (min-width: 768px) {
+    .finSvcs-overlay-govtAssist {
+        font-size: 70px;
+    }
+}
+
+
+
+.finSvcs-description {
+    color: #686868;
+    text-align: justify;
+    text-align-last: center;
+    margin-bottom: 10%;
+}
+
+    .finSvcs-description h2 {
+        border-bottom: 20px;
     }
 
-    .form-error {
-        color: #F65D7B;
-        font-size: 14px;
-    }
-
-    .form-group {
-        margin-bottom: 0;
-        padding: 20px 0;
-    }
-
-    .form-radiobtn {
-        display: inline;
-    }
-
-    .btn-wrapper {
+@media (max-width: 426px) {
+    .finSvcs-description {
         text-align: center;
-        padding: 20px;
     }
 
-    @media (max-width: 600px) {
-        .btn-wrapper {
-            padding: 20px;
+        .finSvcs-description h2 {
+            font-size: 20px;
         }
+}
+
+
+.finSvcs-wrapper {
+    padding: 7% 0;
+}
+
+.finSvcs-scroll a {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    z-index: 2;
+    display: inline-block;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    color: #fff;
+    font: normal 400 20px/1 'Josefin Sans', sans-serif;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .3s;
+}
+
+    .finSvcs-scroll a:hover {
+        opacity: .5;
     }
 
 
-    .btn-primary {
+#scroller a {
+    padding-top: 70px;
+}
+
+@media (max-width: 769px) {
+    #scroller {
+        display: none;
+    }
+}
+
+#scroller a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+}
+
+
+.btn-axcelButtonSvcsPgs {
+    color: #01AED2;
+    font-size: 25px;
+    background-color: #fff;
+    border-color: #01AED2;
+    border-width: 3px;
+    border-radius: 0;
+    font-weight: 700;
+    /*height: 60px;*/
+    padding: 20px 40px;
+}
+
+    .btn-axcelButtonSvcsPgs:hover {
         color: #fff;
         font-size: 25px;
         background-color: #01AED2;
         border-color: #01AED2;
-        height: 60px;
-        /*width: 150px*/
     }
 
-        .btn-primary:hover {
-            color: #fff;
-            font-size: 20px;
-            background-color: #114369;
-            border-color: #114369;
-        }
-
-    .form-control {
-        border: none;
-        border-bottom: 1.5px solid #114369;
+@media (max-width: 426px) {
+    .btn-axcelButtonSvcsPgs {
+        color: #01AED2;
+        font-size: 15px;
+        background-color: #fff;
+        border-color: #01AED2;
+        border-width: 3px;
         border-radius: 0;
+        font-weight: 700;
+        /*height: 60px;*/
+        padding: 10px 20px;
     }
+}
 
-        .form-control:focus {
-            border: none;
-            box-shadow: none;
-            border-bottom: 1.5px solid #01AED2;
-        }
-
-
-    .contactUs-Form div {
-        position: relative;
-    }
-
-    .contactUs-Form label {
-        font-weight: 500;
-    }
-
-    .moving-label {
-        position: absolute;
-        top: 10px;
-        pointer-events: none;
-        z-index: 10;
-        color: #999;
-        transition: 0.5s;
-    }
-
-
-    .contactUs-Form input:focus + label,
-    .contactUs-Form textarea:focus + label,
-    .contactUs-Form input:valid + label,
-    .contactUs-Form textarea:valid + label {
-        position: absolute;
-        top: -12px;
-        color: #01AED2;
-        font-size: 14px;
-        font-weight: 600;
-    }
-
-    .radiobtn_label_blue {
-        color: #01AED2;
-        font-size: 14px;
-        font-weight: 600;
-    }
-
-    @media (max-width: 600px) {
-        .form-group {
-            margin-bottom: 0;
-            padding: 0;
-        }
-
-        .row {
-            margin: 0;
-        }
-
-        .col-xs-12 {
-            margin-bottom: 1em;
-            padding: 10px 0;
-        }
-
-        .moving-label {
-            top: 20px;
-        }
-
-        .bigTextArea {
-            padding: 0;
-            margin-top: 0;
-        }
-    }
-
-    .g-recaptcha {
-        transform: scale(0.77);
-        -webkit-transform: scale(0.77);
-        transform-origin: 0 0;
-        -webkit-transform-origin: 0 0;
-    }
-    /*resize recaptcha dynamically*/
-
-    #g-recaptcha-response {
-        display: block !important;
-        position: absolute;
-        margin: -78px 0 0 0 !important;
-        width: 302px !important;
-        height: 76px !important;
-        z-index: -999999;
+@-webkit-keyframes sdb05 {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
         opacity: 0;
     }
 
-    #recaptcha-error-msg {
-        display: none;
+    50% {
+        opacity: 1;
     }
 
-    .recaptcha-div {
-        text-align: left;
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
     }
+}
+
+@keyframes sdb05 {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
