--- a/AxcelCapital/Views/Home/Index.cshtml
+++ b/AxcelCapital/Views/Home/Index.cshtml
@@ -51,6 +51,42 @@
         });
 
     </script>
+
+    <script>
+
+        var image1Mobile = '@Url.Content("~/Images/mobile_singapore.jpg")';
+        var image1Wide = '@Url.Content("~/Images/singapore_1910x1000.jpg")';
+        var image2Mobile = '@Url.Content("~/Images/mobile_tranquil.jpg")';
+        var image2Wide = '@Url.Content("~/Images/tranquil_1910x1000.jpg")';
+        var image3Mobile = '@Url.Content("~/Images/mobile_merlion.jpg")';
+        var image3Wide = '@Url.Content("~/Images/merlion_1910x1000.jpg")';
+
+
+        $(window).resize(function (e) {
+            if ($(window).width() <= 425) {
+                
+                $("#firstImg").each(function () {
+                    $(this).attr("src", image1Mobile);
+                });
+                $("#secondImg").each(function () {
+                    $(this).attr("src", image2Mobile);
+                });
+                $("#thirdImg").each(function () {
+                    $(this).attr("src", image3Mobile);
+                });
+            } else if ($(window).width() > 425) {
+                $("#firstImg").each(function () {
+                    $(this).attr("src", image1Wide);
+                });
+                $("#secondImg").each(function () {
+                    $(this).attr("src", image2Wide);
+                });
+                $("#thirdImg").each(function () {
+                    $(this).attr("src", image3Wide);
+                });
+            }
+        });
+    </script>
 }
 
 
@@ -74,7 +110,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="~/Images/singapore_1910x1000.jpg" alt="First slide">
+            <img class="d-block w-100" id="firstImg" src="~/Images/singapore_1910x1000.jpg" alt="First slide">
             <div class="carousel-title">
                 <span>Finance Your Business</span>
             </div>
@@ -83,7 +119,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/Images/tranquil_1910x1000.jpg" alt="Second slide">
+            <img class="d-block w-100" id="secondImg" src="~/Images/tranquil_1910x1000.jpg" alt="Second slide">
             <div class="carousel-title">
                 <span>Finance Your Business</span>
             </div>
@@ -92,7 +128,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/Images/merlion_1910x1000.jpg" alt="Third slide">
+            <img class="d-block w-100" id="thirdImg" src="~/Images/merlion_1910x1000.jpg" alt="Third slide">
             <div class="carousel-title">
                 <span>Finance Your Business</span>
             </div>
